[package]
name = "rust_hw4"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4.9.0"
actix-session = "0.10.1"
actix = "0.13.5"
serde = { version = "1.0", features = ["derive"] }
uuid = { version = "1.2", features = ["v4"] }
actix-files = "0.6.6"
actix-web-actors = "4.3.1"
actix-cors = "0.7.0"
