[package]
name = "rust_hw4"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4.9.0"
actix-session = "0.10.1"
actix = "0.13.5"
serde = { version = "1.0", features = ["derive"] }
uuid = { version = "1.2", features = ["v4", "serde"] }
actix-files = "0.6.6"
actix-web-actors = "4.3.1"
actix-cors = "0.7.0"
serde_urlencoded = "0.7.1"
env_logger = "0.11.6"
log = "0.4.22"
serde_json = "1.0.134"
sqlx = { version = "0.8.2", features = ["runtime-tokio-native-tls", "sqlite", "macros"] }
actix-rt = "2.10.0"
mongodb = "3.1.1"
